--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "html-react-parser": "^1.4.5",
     "jquery": "^3.6.0",
     "node-sass": "^7.0.1",
-    "npm-sass": "^3.0.0",
+    "npm-sass": "^3.1.0",
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.0.1",
     "styled-components": "^5.3.3",
